[package]
name = "tf-rs"
version = "0.0.3"
authors = ["Ignacio Duart <iduart@gmail.com>"]

description = "High level (Pythonic) API for the TensorFlow framework."
documentation = "https://docs.rs/tf-rs"
homepage = "https://github.com/iduartgomez/tf-rs"
repository = "https://github.com/iduartgomez/tf-rs"
readme = "README.md"
keywords = ["tensorflow", "API"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "iduartgomez/tf-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
tensorflow = { version = "0.7.0" }
uuid = { version = "0.4", features = ["v4"] }
num-complex = { version = "0.1.40", default-features = false }
error-chain = "0.11.0"
