[package]
name = "tf-rs"
version = "0.0.5"
authors = ["Ignacio Duart <iduart@gmail.com>"]

description = "High level (Pythonic) API for the TensorFlow framework."
documentation = "https://docs.rs/tf-rs"
homepage = "https://github.com/iduartgomez/tf-rs"
repository = "https://github.com/iduartgomez/tf-rs"
readme = "README.md"
keywords = ["tensorflow", "API"]
categories = ["api-bindings"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "iduartgomez/tf-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
tensorflow = { version = "0.14.0" }
uuid = { version = "0.8", features = ["v4"] }
num-complex = { version = "0.2.4", default-features = false }
error-chain = "0.12"
